Add geocoding/persistence/validator tests and migrate Arrays.asList to List.of
1. Geocoding Module Tests (65 new tests, 5 files)
   - SuggestionTest, NearbyLocationTest (spatial-geocoding-api)
   - GeoCoderTest (spatial-geocoding-geocoder)
   - CatalogHelperTest, FeatureBuilderTest (spatial-geocoding-feature)

2. Persistence Module Tests (25 new tests)
   - Enhanced PersistentStoreImplTest with delete, error handling, validation tests

3. Validator Module Tests (23 new tests, 2 files)
   - Enhanced MetacardWktValidatorTest (13 new tests)
   - MessageFormatSupplierTest (10 tests)

4. Arrays.asList → List.of Migration (25 files)
   - catalog/core modules: 14 files updated
   - platform/security modules: 11 files updated
   - Returns immutable lists, better performance

Total: 113 new tests, 25 files modernized

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>